<resources>
    <string name="app_name" translatable="false">Stitch</string>

    <string name="request_overlay">Dropzone permission required</string>
    <string name="request_failed">Permission request failed</string>
    <string name="please_select_image">No image selected</string>
    <string name="please_add_image">Please add image first</string>
    <string name="please_select_swap">Please select two or more images to swap</string>

    <string name="tile_label">Stitch</string>
    <plurals name="notify_text">
        <item quantity="one">Tap to stop capture / %d image</item>
        <item quantity="other">Tap to stop capture / %d images</item>
    </plurals>
    <plurals name="alert_delete">
        <item quantity="one">Are you sure you want to delete the %d selected image?</item>
        <item quantity="other">Are you sure you want to delete the %d selected images?</item>
    </plurals>
    <string name="alert_stitching">Stitching…</string>
    <string name="alert_computing">Computing (%d/%d)…</string>
    <string name="alert_reading">Reading…</string>
    <string name="alert_cancel">Cancel</string>
    <string name="alert_ok">OK</string>

    <string name="switch_diff">Diff mode</string>
    <string name="switch_homography">Feature match</string>

    <string name="menu_remove">Delete</string>
    <string name="menu_auto_stitch">Auto stitch</string>
    <string name="menu_select_all">Select all</string>
    <string name="menu_select_clear">Unselect</string>
    <string name="menu_import">Add image</string>
    <string name="menu_save">Save</string>
    <string name="menu_share">Share</string>
    <string name="menu_horizon">Horizontal</string>

    <string name="tab_auto">Auto</string>
    <string name="tab_tile">Tile</string>
    <string name="tab_man">Manual</string>

    <string name="label_select">%d/%d Selected</string>
    <string name="label_dx">Horizontal offset</string>
    <string name="label_dy">Vertical offset</string>
    <string name="label_trim">Transition</string>
    <string name="label_xrange">Horizontal range</string>
    <string name="label_yrange">Vertical range</string>
    <string name="label_rotate">Rotate</string>
    <string name="label_scale">Scale</string>

    <string name="save_success">Image saved</string>
    <string name="throw_error">Oops</string>
    <string name="throw_error_capture">Screen capture failed，Please allow background running</string>

    <string name="guidance_info">
        &lt;big>&lt;big>&lt;b>Stitch&lt;/b>&lt;/big>&lt;/big>&lt;br/>
        Screenshot stitch helper&lt;br/>
        &lt;small>%1$s&lt;/small>
    </string>
    <string name="about_info">
        &lt;big>&lt;big>&lt;b>Stitch&lt;/b>&lt;/big>&lt;/big>&lt;br/>
        Screenshot stitch helper&lt;br/>
        &lt;small>%1$s&lt;/small>&lt;br/>
        &lt;br/>
        &lt;ol>
        &lt;li>Tap Import/Screenshot to add images.&lt;/li>
        &lt;li>In the screenshot mode, tap the float button to add screenshots, long press the button to open the editor.&lt;/li>
        &lt;li>Tap the circle to select images to modify the stitching parameters, or drag the circle to move the images.&lt;/li>
        &lt;li>Automatic stitching is powered by OpenCV, which can be used to stitch maps. Please ensure there is enough overlapping areas.&lt;/li>
        &lt;li>Stitched data will be cleared after restart or tapping the quick button. Please export it as soon as you finish editing it.&lt;/li>
        &lt;/ol>
        Enjoy~
    </string>
    <string name="menu_support">Donate</string>
    <string name="support_error">Alipay not installed</string>
    <string name="menu_github">GitHub</string>
    <string name="open_error">Browser open failed</string>
    <string name="menu_swap">Swap</string>

    <string name="policy_version" translatable="false">v2</string>
    <string name="policy">
&lt;big>&lt;big>&lt;b>Stitch&lt;/b>&lt;/big>&lt;/big>&lt;br/>
Welcome to use the Screenshot stitch helper.&lt;br />
Stitch require the following permissions:&lt;br />
&lt;ol>
    &lt;li>&lt;b>Record the screen&lt;/b>&lt;br />
When taking screenshot, this permission will be requested to capture screenshot&lt;/li>
    &lt;li>&lt;b>Display dropzone windows&lt;/b>&lt;br />
When taking screenshot, this permission will be requested to display float button&lt;/li>
    &lt;li>&lt;b>Expand/Collapse system status bar&lt;/b>&lt;br />
When tap the quick tile button, this permission will be used to collapse system status bar&lt;/li>
&lt;/ol>
Please read the &lt;a href="https://ekibun.github.io/Stitch/v2/privacy">Privacy Policy&lt;/a> carefully before using Stitch.&lt;br />
&lt;br />
By clicking &quot;Accept&quot;, you signify that you have read and agree to the above terms. We will obtain and use the permissions in accordance with the Privacy Policy, and will not collect and store any information without needed.&lt;br />
    </string>
    <string name="policy_accept">Accept</string>
    <string name="policy_dismiss">Dismiss</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="opensource" translatable="false">
        &lt;b>Kotlin Stdlib&lt;/b>&lt;br/>
        &lt;i>Kotlin Standard Library for JVM&lt;/i>&lt;br/>
        Apache License, Version 2.0&lt;br/>
        &lt;br/>
        &lt;b>Core Kotlin Extensions&lt;/b>&lt;br/>
        &lt;i>Kotlin extensions for &#180;core&#180; artifact&lt;/i>&lt;br/>
        Apache License, Version 2.0&lt;br/>
        &lt;br/>
        &lt;b>Android AppCompat Library&lt;/b>&lt;br/>
        &lt;i>The Support Library is a static library that you can add to your Android application in order to use APIs that are either not available for older platform versions or utility APIs that aren&#180;t a part of the framework APIs. Compatible on devices running API 14 or later.&lt;/i>&lt;br/>
        Apache License, Version 2.0&lt;br/>
        &lt;br/>
        &lt;b>Material Components For Android&lt;/b>&lt;br/>
        &lt;i>Material Components for Android is a static library that you can add to your Android application in order to use APIs that provide implementations of the Material Design specification. Compatible on devices running API 14 or later.&lt;/i>&lt;br/>
        Apache License, Version 2.0&lt;br/>
        &lt;br/>
        &lt;b>Kotlinx Coroutines Core&lt;/b>&lt;br/>
        &lt;i>Coroutines support libraries for Kotlin&lt;/i>&lt;br/>
        Apache License, Version 2.0&lt;br/>
        &lt;br/>
        &lt;b>Kotlinx Coroutines Android&lt;/b>&lt;br/>
        &lt;i>Coroutines support libraries for Kotlin&lt;/i>&lt;br/>
        Apache License, Version 2.0&lt;br/>
        &lt;br/>
        &lt;b>OpenCV&lt;/b>&lt;br/>
        &lt;i>Open Source Computer Vision Library&lt;/i>&lt;br/>
        Apache License, Version 2.0&lt;br/>
        &lt;br/>
        &lt;b>SURF&lt;/b>&lt;br/>
        &lt;i>Speeded up robust features&lt;/i>&lt;br/>
        SURF is noncommercial. You may not use this work for commercial purposes. For any reuse or distribution, you must make clear to others the license terms of this work. Any of these conditions can be waived if you get written permission from the copyright holder.
    </string>
    <string name="menu_opensource">Opensource</string>

    <string name="menu_undo">Undo</string>
    <string name="import_from_gallery">Import gallery</string>
    <string name="import_from_capture">Screen capture</string>
    <string name="menu_about">About</string>
    <string name="clear_history">Clear history</string>
    <string name="menu_divider" translatable="false">-</string>
</resources>