<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:ignore="ContentDescription,NestedWeights">

    <TextView
        android:id="@+id/guidance_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:lineSpacingMultiplier="1.2"
        tools:text="@string/guidance_info" />

    <TextView
        android:id="@+id/menu_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:text="@string/menu_about"
        android:textColor="?android:attr/textColorPrimary" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false">

        <LinearLayout
            android:id="@+id/guidance_from_gallery"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_rect"
            android:backgroundTint="@color/opaque"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_gallery"
                android:tint="?android:textColorPrimary" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/import_from_gallery" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/guidance_from_capture"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:background="@drawable/bg_rect"
            android:backgroundTint="@color/opaque"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="24dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:src="@drawable/ic_tile"
                android:tint="?android:textColorPrimary" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/import_from_capture" />
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:id="@+id/menu_clear_history"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:background="?android:attr/selectableItemBackground"
        android:padding="8dp"
        android:text="@string/clear_history"
        android:textColor="?android:attr/textColorPrimary" />
</LinearLayout>