<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/edit"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/ctrl_plane"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="10dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:background="?android:attr/colorBackgroundFloating"
            android:padding="8dp">

            <TextView
                android:id="@+id/menu_select_all"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:text="@string/menu_select_all"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/menu_select_clear"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:text="@string/menu_select_clear"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/select_info"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                tools:text="已选中 8/10" />

            <TextView
                android:id="@+id/menu_remove"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:text="@string/menu_remove"
                android:textColor="@color/colorWarn" />

            <TextView
                android:id="@+id/menu_auto_stitch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:text="@string/menu_auto_stitch"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:baselineAligned="false"
            android:background="?android:attr/colorBackgroundFloating"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="4dp"
                    android:padding="8dp"
                    android:text="@string/label_dx" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:padding="8dp"
                    android:text="@string/label_dy" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="4dp"
                    android:padding="8dp"
                    android:text="@string/label_trim" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <SeekBar
                    android:id="@+id/seek_x"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:max="20"
                    android:progress="10"
                    tools:ignore="NestedWeights" />

                <SeekBar
                    android:id="@+id/seek_y"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:max="20"
                    android:progress="10" />

                <SeekBar
                    android:id="@+id/seek_trim"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:max="20"
                    android:progress="10" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/opaque"
            android:orientation="horizontal"
            android:padding="8dp">

            <TextView
                android:id="@+id/menu_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:text="@string/menu_import"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/menu_capture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:text="@string/menu_capture"
                android:textColor="?android:attr/textColorPrimary" />

            <TextView
                android:id="@+id/menu_version"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                tools:text="v1.0.0" />

            <TextView
                android:id="@+id/menu_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackgroundBorderless"
                android:padding="8dp"
                android:text="@string/menu_save"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>